[package]
name = "dockeye"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.15", features = ["persistence"] }
egui = "0.15"
epi = "0.15"
epaint = "0.15"
docker-api = "0.6"
anyhow = "1"
tokio = { version = "1", features = ["rt", "macros"] }
log = "0.4"
pretty_env_logger = "0.4"

parking_lot_core = "=0.8.0" # fix WASM build
