[package]
name = "dockeye"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.15", features = ["persistence"] }
egui = "0.15"
epi = "0.15"
epaint = "0.15"
docker-api = { git = "https://github.com/vv9k/docker-api-rs" }
anyhow = "1"
tokio = { version = "1", features = ["rt", "macros", "time"] }
log = "0.4"
pretty_env_logger = "0.4"
futures = "0.3"
bytes = "1"
strip-ansi-escapes = "0.1.1"
clipboard = "0.5"
http = "0.2"

parking_lot_core = "=0.8.0" # fix WASM build
