[package]
name = "dockeye"
version = "0.2.0"
edition = "2021"
authors = ["Wojciech Kępka <wojciech@wkepka.dev>"]
license = "GPLv3"

[dependencies]
eframe = { version = "0.18", features = ["persistence"] }
egui = "0.18"
epaint = "0.18"
docker-api = { git = "https://github.com/vv9k/docker-api-rs" }
anyhow = "1"
tokio = { version = "1", features = ["rt", "macros", "time", "fs", "io-util"] }
log = "0.4"
pretty_env_logger = "0.4"
futures = "0.3"
bytes = "1"
strip-ansi-escapes = "0.1.1"
clipboard = "0.5"
http = "0.2"
lazy_static = "1"
native-dialog = "0.5.5"
dirs = "4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
chrono = "0.4"
ropey = "1"
